# TransVoxia

./: .env  .gitignore  Dockerfile  README.md  asgi.py  db.sqlite3  manage.py  pyproject.toml  requirements.txt  store_voice.py  tox.ini
.github/workflows/: test.yml
Graduation_Project/: fake_urls.py  settings.py  settings_fake.py  urls.py
Trans_Voxia/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
accounts/: admin.py  models.py  serializers.py
accounts/migrations/: 0001_initial.py
audio/: admin.py  api_description.py  apps.py  models.py  serializers.py  ssml.json  urls.py  utils.py  views.py
audio-temp/: .gitkeep
audio/migrations/: 0001_initial.py  0002_play_ht_voices.py  0002_remove_play_ht_length_ratio.py  0002_rename_changed_audi_url_play_ht_changed_audio_url.py  0003_auto_20230625_1654.py  0004_auto_20230630_1833.py  0005_auto_20230630_2053.py  0006_auto_20230707_1740.py  0008_auto_20230709_1721.py  (+2 more)
chatgpt/: api_description.py  serializers.py  tests.py  urls.py  utils.py  views.py
core/: admin.py  decorators.py  forms.py  models.py  serializers.py  urls.py  utils.py  views.py
credentials/: example.json
fake_api/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
language/: language.csv  voices.csv
scripts/: check_voice.py  get_voice.py  import_language.sh  voice.json
subscription/: models.py
translator/: admin.py  models.py  utils.py
uploads/: CmwSf7rI2II_KtlnHDC_Ij9w4B1.m4a
video/: __init__.py  admin.py  apps.py  forms.py  models.py  signals.py  tasks.py  test.py  tests.py  urls.py  utils.py  views.py
(+31 files in other folders)
